compiler/testData/diagnostics/tests/recovery/namelessToplevelDeclarations.kt
// !DIAGNOSTICS: -REDECLARATION

package<!SYNTAX!><!>

<!CONFLICTING_OVERLOADS, FUNCTION_DECLARATION_WITH_NO_NAME!>fun ()<!> {

}

konst<!SYNTAX!><!> : Int = 1


class<!SYNTAX!><!> {

}

interface<!SYNTAX!><!> {

}

object<!SYNTAX!><!> {

}

enum class<!SYNTAX!><!> {}

annotation class<!SYNTAX!><!> {}
